[gd_scene load_steps=3 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://point.tscn" type="PackedScene" id=2]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="point" parent="." instance=ExtResource( 2 )]
margin_left = 87.0
margin_top = 305.0
margin_right = 96.0
margin_bottom = 314.0
nama = "A"
parent = true

[node name="point2" parent="." instance=ExtResource( 2 )]
margin_left = 215.0
margin_top = 303.0
margin_right = 224.0
margin_bottom = 312.0
nama = "B"

[node name="point3" parent="." instance=ExtResource( 2 )]
margin_left = 307.0
margin_top = 409.0
margin_right = 316.0
margin_bottom = 418.0
nama = "Target"

[node name="point4" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 255.742
margin_top = 136.697
margin_right = 264.742
margin_bottom = 145.697
nama = "pos_mid"
node = NodePath("..")

[node name="CheckBox" type="CheckBox" parent="."]
visible = false
margin_left = 783.0
margin_top = 25.0
margin_right = 875.0
margin_bottom = 72.0
text = "POINT 2"

[node name="CheckBox3" type="CheckBox" parent="."]
margin_left = 785.0
margin_top = 114.0
margin_right = 877.0
margin_bottom = 161.0
text = "3 bone/2 bone"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 275.0
margin_top = 21.0
margin_right = 333.0
margin_bottom = 45.0
text = "120"

[node name="Label" type="Label" parent="LineEdit"]
anchor_bottom = 0.292
margin_left = -58.0
margin_top = 3.0
margin_right = -18.0
margin_bottom = 9.992
text = "R1"

[node name="LineEdit4" type="LineEdit" parent="."]
visible = false
margin_left = 440.0
margin_top = 63.0
margin_right = 666.0
margin_bottom = 87.0
text = "0.7"

[node name="Label" type="Label" parent="LineEdit4"]
anchor_bottom = 0.292
margin_left = -82.0
margin_top = 3.0
margin_right = -16.0
margin_bottom = 26.992
text = "parameter
"

[node name="LineEdit5" type="LineEdit" parent="."]
visible = false
margin_left = 438.0
margin_top = 119.0
margin_right = 664.0
margin_bottom = 143.0
text = "0.1"

[node name="Label" type="Label" parent="LineEdit5"]
anchor_bottom = 0.292
margin_left = -82.0
margin_top = 3.0
margin_right = -16.0
margin_bottom = 26.992
text = "AB
"

[node name="LineEdit3" type="LineEdit" parent="."]
margin_left = 275.0
margin_top = 102.0
margin_right = 334.0
margin_bottom = 126.0
text = "60"

[node name="Label" type="Label" parent="LineEdit3"]
anchor_bottom = 0.292
margin_left = -55.0
margin_top = 1.0
margin_right = -15.0
margin_bottom = 7.992
text = "R3"

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 275.0
margin_top = 60.0
margin_right = 333.0
margin_bottom = 84.0
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LineEdit2"]
anchor_bottom = 0.292
margin_left = -58.0
margin_top = 3.0
margin_right = -18.0
margin_bottom = 9.992
text = "R2"

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 561.0
margin_top = 25.0
margin_right = 666.0
margin_bottom = 46.0

[node name="HSlider" type="HSlider" parent="."]
visible = false
margin_left = 337.0
margin_top = 332.0
margin_right = 525.0
margin_bottom = 348.0

[node name="CheckBox2" type="CheckBox" parent="."]
margin_left = 784.0
margin_top = 82.0
margin_right = 841.0
margin_bottom = 106.0
disabled = true
text = "spider leg/dino leg"

[node name="Button" type="Button" parent="."]
margin_left = 888.0
margin_top = 8.0
margin_right = 1015.0
margin_bottom = 28.0
text = "IK math"

[node name="Button2" type="Button" parent="."]
margin_left = 608.0
margin_top = 8.0
margin_right = 660.0
margin_bottom = 28.0
toggle_mode = true
text = "flip"

[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="toggled" from="CheckBox3" to="." method="_on_CheckBox3_toggled"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="LineEdit4" to="." method="_on_LineEdit4_text_changed"]
[connection signal="text_changed" from="LineEdit5" to="." method="_on_LineEdit4_text_changed"]
[connection signal="text_changed" from="LineEdit3" to="." method="_on_LineEdit3_text_changed"]
[connection signal="text_changed" from="LineEdit2" to="." method="_on_LineEdit2_text_changed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="CheckBox2" to="." method="_on_CheckBox2_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="Button2" to="." method="_on_Button2_toggled"]
